--- a/style.css
+++ b/style.css
@@ -166,3 +166,14 @@ footer {
   text-align: center;
   font-size: 14px;
 }
+
+/* media queries */
+@media (min-width: 700px) {
+   :root {
+    --bg-url: url(.assets/background/bg-desktop.jpg);
+   }
+
+   .light {
+    --bg-url: url(.assets/background/bg-desktop-light.jpg);
+   }
+}
